# Iran-Israel-Grounding-Package

./: .env.example  AGENTS.md  README.md  grounding-set.md  pipeline-design.md  sources.md
.claude/skills/generate-sitrep/: SKILL.md
.claude/skills/rss-discover/: SKILL.md
.claude/skills/url-to-markdown/: SKILL.md
reference/: .env.example  README.md  pyproject.toml
reference/pipeline/: __init__.py  cli.py  graph.py  llm.py  schemas.py  state.py  whitelist.py
reference/pipeline/nodes/: research.py  triage.py  writer.py
